[gd_scene load_steps=3 format=3 uid="uid://c2c5hgu7x5on2"]

[ext_resource type="Script" path="res://Assets/Script/Class/Inventory Items/inventory_items.gd" id="1_uuchl"]

[sub_resource type="CircleShape2D" id="CircleShape2D_mlqjs"]
radius = 25.0

[node name="inventory_items" type="Node2D" groups=["items"]]
script = ExtResource("1_uuchl")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_mlqjs")

[node name="Sprite2D" type="Sprite2D" parent="."]
unique_name_in_owner = true

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
